[package]
name = "ahv"
version = "0.3.0"
authors = ["Mary <mary@mary.zone>"]
license = "Apache-2.0 OR MIT"
repository = "https://www.github.com/marysaka/ahv.git"
homepage = "https://www.github.com/marysaka/ahv"
description = "Bindings for Apple Silicon Hypervisor"
keywords = ["hypervisor", "virtualization", "macOS", "apple", "aarch64"]
categories = ["api-bindings", "no-std", "os::macos-apis"]
edition = "2021"
rust-version = "1.65"

exclude = [
    ".github"
]

[features]

# The default feature activates nothing to ensure developers are aware of what
# they use. This means this crate supports Hypervisor from macOS 11.0.0
# by default.
default = []

# Updated to the maximum version each time a new one is introduced
max = ["macos_13_0_0"]

macos_13_0_0 = ["macos_12_1_0"]
macos_12_1_0 = []

[dependencies]

[package.metadata.docs.rs]
features = ["max"]
targets = ["aarch64-apple-darwin"]